[project]
name = "web-monitor"
version = "3.0.0"
description = "Web任务系统"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.9.0",
    "requests>=2.31.0",
    "aiosqlite>=0.19.0",
    "pydantic>=2.5.0",
    "apscheduler>=3.10.0",
    "pyyaml>=6.0.0",
    "ruamel.yaml>=0.18.0",
    "aiosmtplib>=3.0.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.6",
    "itsdangerous>=2.1.0",
    "beautifulsoup4>=4.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.11.0",
    "ruff>=0.1.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# 监控模块在文件末尾 import register_* 以避免循环依赖
"monitors/*.py" = ["E402"]

[tool.black]
line-length = 100
target-version = ["py310"]

