[project]
name = "web-monitor"
version = "2.1.5"
description = "Web任务系统"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.9.0",
    "requests>=2.31.0",
    "selenium>=4.27.0",
    "ddddocr>=1.5.0,<1.6.0",
    "opencv-python-headless>=4.8.0",
    "numpy>=1.24.0",
    "aiosqlite>=0.19.0",
    "pydantic>=2.5.0",
    "apscheduler>=3.10.0",
    "pyyaml>=6.0.0",
    "ruamel.yaml>=0.18.0",
    "aiosmtplib>=3.0.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.6",
    "itsdangerous>=2.1.0",
    "beautifulsoup4>=4.12.0",
    "pillow>=10.0.0",
    "rsa>=4.9",
    "pycryptodome>=3.19.0",
    "chromadb>=0.4.0",
    "httpx>=0.25.0",
    "openai>=1.0.0",
    "rank-bm25>=0.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.11.0",
    "ruff>=0.1.6",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "mkdocs-minify-plugin>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [".git", ".venv", "weworkapi_python"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# 监控模块在文件末尾 import register_* 以避免循环依赖
"monitors/*.py" = ["E402"]
# 青龙脚本需先修改 sys.path 再 import
"ql/*.py" = ["E402"]
# Selenium 常用 expected_conditions as EC 的惯例
"tasks/rainyun/**/*.py" = ["N812"]
# wecom_crypto 需条件 import 及 ElementTree 兼容映射
"src/ai_assistant/wecom_crypto.py" = ["E402", "N814"]

[tool.black]
line-length = 100
target-version = ["py310"]
extend-exclude = "weworkapi_python"

